// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleWorker can add and list jobs from within a job function 1`] = `
Array [
  Object {
    "handler": "testing-processing",
  },
  Object {
    "handler": "testing-processing-2",
  },
]
`;

exports[`SimpleWorker can add and list jobs from within a job function 2`] = `
Array [
  Object {
    "handler": "testing-processing",
  },
  Object {
    "handler": "testing-processing-2",
  },
]
`;

exports[`SimpleWorker can add and list jobs from within a job function 3`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": undefined,
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_processing_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_started",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "job_id": "1",
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": undefined,
      "name": "testing-processing-2",
    },
  },
]
`;

exports[`SimpleWorker can create a new queue instance 1`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
]
`;

exports[`SimpleWorker can flush the queue 1`] = `
Array [
  Object {
    "handler": "testing-processing",
    "input": "123",
  },
  Object {
    "handler": "testing-processing",
    "input": "456",
  },
  Object {
    "handler": "testing-processing",
    "input": "789",
  },
]
`;

exports[`SimpleWorker can handle an error in the job function (async) 1`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": undefined,
      "name": "testing-errors",
    },
  },
  Object {
    "kind": "job_processing_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_started",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "job_id": "1",
      "name": "testing-errors",
    },
  },
  Object {
    "kind": "job_errored",
    "level": "error",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "duration": 9001,
      "error_message": "The CPU is on fire.",
      "error_stack": "Error: The CPU is on fire.",
      "job_id": "1",
      "name": "testing-errors",
    },
  },
]
`;

exports[`SimpleWorker can handle an error in the job function (sync) 1`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": undefined,
      "name": "testing-errors",
    },
  },
  Object {
    "kind": "job_processing_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_started",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "job_id": "1",
      "name": "testing-errors",
    },
  },
  Object {
    "kind": "job_errored",
    "level": "error",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "duration": 9001,
      "error_message": "The CPU is on fire.",
      "error_stack": "Error: The CPU is on fire.",
      "job_id": "1",
      "name": "testing-errors",
    },
  },
]
`;

exports[`SimpleWorker can pause and resume the processing 1`] = `
Array [
  Object {
    "handler": "testing-processing",
  },
]
`;

exports[`SimpleWorker can pause and resume the processing 2`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_processing_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": undefined,
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_started",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "job_id": "1",
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_processed",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "duration": 9001,
      "job_id": "1",
      "name": "testing-processing",
      "result": undefined,
    },
  },
]
`;

exports[`SimpleWorker can queue and subsequently process a job 1`] = `
Array [
  Object {
    "handler": "testing-processing",
    "input": "123",
  },
]
`;

exports[`SimpleWorker can queue and subsequently process a job 2`] = `
Array [
  Object {
    "handler": "testing-processing",
    "input": "123",
  },
]
`;

exports[`SimpleWorker can queue and subsequently process a job 3`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": Object {
        "input": "123",
      },
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_processing_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_started",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {
        "input": "123",
      },
      "job_id": "1",
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_function_log_info",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {
        "input": "123",
      },
      "job_id": "1",
      "name": "testing-processing",
    },
  },
]
`;

exports[`SimpleWorker can queue and subsequently process a job 4`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": Object {
        "input": "123",
      },
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_processing_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_started",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {
        "input": "123",
      },
      "job_id": "1",
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_function_log_info",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {
        "input": "123",
      },
      "job_id": "1",
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_function_log_warn",
    "level": "warn",
    "values": Object {
      "attempt": 0,
      "data": Object {
        "input": "123",
      },
      "foo": "bar",
      "job_id": "1",
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_function_log_error",
    "level": "error",
    "values": Object {
      "attempt": 0,
      "data": Object {
        "input": "123",
      },
      "job_id": "1",
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_processed",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {
        "input": "123",
      },
      "duration": 9001,
      "job_id": "1",
      "name": "testing-processing",
      "result": undefined,
    },
  },
]
`;

exports[`SimpleWorker can schedule jobs 1`] = `
Object {
  "handler": "testing-processing",
}
`;

exports[`SimpleWorker can timeout a long running job 1`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": undefined,
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_processing_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_started",
    "level": "info",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "job_id": "1",
      "name": "testing-processing",
    },
  },
  Object {
    "kind": "job_timeout",
    "level": "error",
    "values": Object {
      "attempt": 0,
      "data": Object {},
      "duration": 9001,
      "job_id": "1",
      "name": "testing-processing",
    },
  },
]
`;

exports[`SimpleWorker errors when the job configuration is missing while adding 1`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_errored",
    "level": "error",
    "values": Object {
      "error_message": "Job configuration not found",
      "name": "not-existing",
    },
  },
]
`;

exports[`SimpleWorker errors when the job configuration is missing while processing 1`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queued",
    "level": "info",
    "values": Object {
      "data": undefined,
      "name": "not-existing",
    },
  },
  Object {
    "kind": "job_processing_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_errored",
    "level": "error",
    "values": Object {
      "error_message": "Job configuration not found",
      "name": "not-existing",
    },
  },
]
`;

exports[`SimpleWorker logs internal errors in the queue 1`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_queue_connection_error",
    "level": "error",
    "values": Object {
      "error_message": "Oh no.",
      "error_stack": "Error: Oh no.",
    },
  },
]
`;

exports[`SimpleWorker logs stalled jobs in the queue 1`] = `
Array [
  Object {
    "kind": "job_queue_connection_ready",
    "level": "info",
    "values": undefined,
  },
  Object {
    "kind": "job_stalled",
    "level": "warn",
    "values": Object {
      "attempt": 1,
      "data": Object {
        "email": "pepe@me.me",
      },
      "job_id": 333,
      "name": "test-handler",
    },
  },
]
`;
